syntax = "proto3";

package pb;

service UserService {
    rpc GetUserInfo (GetUserReq) returns (UserInfo) {}
}

message GetUserReq {
    uint64 userID = 1;
}

message UserInfo {
    // @inject_tag: validate:"lgt:10"
    uint64 userID = 1;
    string username = 2;
}
